# parallel-incremental

./: parallel-incremental.cabal
src/Control/Higher/: Applicative.hs
src/Control/Higher/Comonad/: Cofree.hs
src/Control/Higher/Monad/: Free.hs
src/Data/: DList.hs  Delta.hs  Fix.hs  Grammar.hs  Graph.hs  Isogrammar.hs  Rec.hs  Recursive.hs  Relation.hs  Result.hs  Semiring.hs
src/Data/Higher/: Foldable.hs  Function.hs  Functor.hs  Monoid.hs  Semigroup.hs  Traversable.hs
src/Data/Higher/Functor/: Classes.hs  Foldable.hs
src/Data/Sparse/: Matrix.hs  Shape.hs  Vector.hs  Volume.hs
src/Example/: Arithmetic.hs  Lambda.hs
src/Text/Parser/: Deterministic.hs  Recursive.hs  RecursiveDescent.hs  Valiant.hs
src/Text/Printer/: RecursiveAscent.hs
