name:                parallel-incremental
version:             0.0.0.0
synopsis:            Parallel and incremental data.
homepage:            https://github.com/robrix/parallel-incremental
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Delta
                     , Data.Fix
                     , Data.Grammar
                     , Data.Higher.Foldable
                     , Data.Higher.Function
                     , Data.Higher.Functor
                     , Data.Higher.Functor.Classes
                     , Data.Higher.Monoid
                     , Data.Higher.Semigroup
                     , Data.Rec
                     , Data.Recursive
                     , Data.Result
                     , Data.Semiring
                     , Data.Sparse.Matrix
                     , Data.Sparse.Shape
                     , Data.Sparse.Vector
                     , Data.Sparse.Volume
                     , Example.Arithmetic
                     , Example.Lambda
                     , Text.Parser.Deterministic
                     , Text.Parser.RecursiveDescent
                     , Text.Parser.Valiant
                     , Text.Printer.RecursiveAscent
  build-depends:       base >=4.10 && <4.11
                     , parsers
                     , these
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
